# pipes-bytestring-mmap

./: .gitignore  README.md  pipes-bytestring-mmap.cabal
Pipes/ByteString/: MMap.hs
Pipes/ByteString/MMap/: Internal.hs
bench/: GHCBufMain.hs  LazyMMapMain.hs  LazyMain.hs  Main.hs  PipesMMap.hs  PipesMMapSafish.hs  PipesMain.hs  README.md  clean.sh  mkfiles.sh  run.sh
cbits/: hs_pipes_bytestring_mmap.c
include/: hs_pipes_bytestring_mmap.h
